--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "openai": "^6.3.0",
     "prisma": "^6.16.2",
     "uuid": "^13.0.0",
     "winston": "^3.17.0"
