Remove dev.db from tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,9 @@ coverage/
 
 # nyc test coverage
 .nyc_output/
+# Database files
+*.db
+*.db-*
+backend/prisma/dev.db
+backend/prisma/*.db
+backend/prisma/*.db-journal
