--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,6 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/lvlup?schema=public"
-
-# Server
 PORT=3000
 NODE_ENV=development
+DATABASE_URL="postgresql://user:password@localhost:5432/lvlup?schema=public"
+OPENAI_API_KEY="your-openai-api-key-here"
+CORS_ORIGIN="http://localhost:5173"
 
-# JWT Secret (for future user auth)
-JWT_SECRET=your-super-secret-jwt-key
-
-# API Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=1000
-
-# Logging
-LOG_LEVEL=debug
