Fix: Run database migrations automatically on Railway deploy - Updated build script to include 'prisma migrate deploy' - Now migrations run automatically when Railway builds the app - No manual terminal access needed - This will fix the HTTP 500 errors Sequence: build → compile → generate → migrate → start

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,14 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "start:ts": "ts-node src/index.ts",
-    "build": "tsc && prisma generate",
+    "build": "tsc && prisma generate && prisma migrate deploy",
     "generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate deploy",
     "db:seed": "ts-node prisma/seed.ts",
     "db:reset": "prisma db push --force-reset && npm run db:seed",
     "postinstall": "prisma generate",
-    "deploy": "npm run build && npm run db:migrate"
+    "deploy": "npm run build"
   },
   "keywords": [],
   "author": "",
