--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start": "node dist/index.js",
+    "start": "prisma migrate deploy && node dist/index.js",
     "start:ts": "ts-node src/index.ts",
-    "build": "tsc && prisma generate && prisma migrate deploy",
+    "build": "tsc && prisma generate",
     "generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate deploy",
