Fix: Remove migrations from gitignore and commit them - Migrations MUST be in version control - Removed backend/prisma/migrations/ from .gitignore - Added initial migration with all tables - This will fix Railway deployment Railway will now run migrations on startup

--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ Icon
 
 # Prisma
 backend/prisma/.env
-backend/prisma/migrations/
+# NOTE: backend/prisma/migrations/ should be committed!
 
 # TypeScript compiled output (keep source .ts files only)
 backend/src/**/*.js
