--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start": "prisma migrate deploy && node dist/index.js",
+    "start": "prisma db push --accept-data-loss && node dist/index.js",
     "start:ts": "ts-node src/index.ts",
     "build": "tsc && prisma generate",
     "generate": "prisma generate",
@@ -49,6 +49,6 @@
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   }
 }
