--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "dev:prod": "npm run env:prod && npm run dev",
     "start": "npx prisma migrate deploy && node dist/index.js",
     "start:ts": "ts-node src/index.ts",
-    "build": "tsc && prisma generate",
+    "build": "prisma generate && tsc",
     "generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate deploy",
