--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -8,6 +8,9 @@
   # Output directory (where the built files are)
   publish = "dist"
   
+  # Base directory (where package.json is located)
+  base = "frontend"
+  
   # Environment variables for build
   [build.environment]
     NODE_VERSION = "20"
