--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:seed": "ts-node prisma/seed.ts",
     "db:reset": "prisma db push --force-reset && npm run db:seed",
+    "setup-auth": "ts-node scripts/setup-auth.ts",
     "postinstall": "prisma generate",
     "deploy": "npm run build",
     "env:local": "cd .. && ./switch-env.sh local",
