--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "geoip-lite": "^1.4.10",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
@@ -44,6 +45,9 @@
     "pg": "^8.17.1",
     "prisma": "^6.16.2",
     "qrcode": "^1.5.4",
+    "rate-limiter-flexible": "^9.0.1",
+    "redis": "^5.10.0",
+    "semver": "^7.7.3",
     "speakeasy": "^2.0.0",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
