--- a/backend/package.json
+++ b/backend/package.json
@@ -58,11 +58,13 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/geoip-lite": "^1.4.4",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.5.2",
     "@types/qrcode": "^1.5.6",
+    "@types/semver": "^7.7.1",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
