--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "env:status": "cd .. && ./switch-env.sh status"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@types/node": "^24.7.2",
     "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
