--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
     // Environment Settings
     "module": "commonjs",
     "target": "esnext",
-    "types": [],
+    "types": ["node"],
 
     // Other Outputs
     "sourceMap": true,
