--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "deploy": "npm run build",
     "analyze:redundancy": "node dist/scripts/analyzeRedundancy.js",
     "backfill:level-metrics": "ts-node src/scripts/backfillLevelMetrics.ts",
+    "backfill:active-users": "ts-node src/scripts/backfillActiveUsers.ts",
     "env:local": "cd .. && ./switch-env.sh local",
     "env:prod": "cd .. && ./switch-env.sh production",
     "env:status": "cd .. && ./switch-env.sh status"
