--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "backfill:level-metrics": "ts-node src/scripts/backfillLevelMetrics.ts",
     "backfill:active-users": "ts-node src/scripts/backfillActiveUsers.ts",
     "backfill:cohorts": "ts-node src/scripts/backfillCohorts.ts",
+    "backfill:monetization": "ts-node src/scripts/backfillMonetization.ts",
     "env:local": "cd .. && ./switch-env.sh local",
     "env:prod": "cd .. && ./switch-env.sh production",
     "env:status": "cd .. && ./switch-env.sh status"
