--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "env:local": "cd .. && ./switch-env.sh local",
-    "env:prod": "cd .. && ./switch-env.sh production",
-    "env:status": "cd .. && ./switch-env.sh status"
+    "env:local": "cd .. && ./env local",
+    "env:prod": "cd .. && ./env production",
+    "env:status": "cd .. && ./env status"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
