--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,13 @@ DATABASE_URL="postgresql://user:password@localhost:5432/lvlup?schema=public"
 OPENAI_API_KEY="your-openai-api-key-here"
 CORS_ORIGIN="http://localhost:5173"
 
+# Runtime mode
+RUN_API=true
+RUN_JOBS=true
+
+# Hourly aggregation toggles (daily jobs still run)
+ENABLE_LEVEL_METRICS_HOURLY=0
+LEVEL_CHURN_HOURLY_REFRESH=0
+ENABLE_ACTIVE_USERS_HOURLY=0
+ENABLE_COHORT_HOURLY=0
+ENABLE_MONETIZATION_HOURLY=0
