--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,12 @@ RUN_JOBS=true
 # Hourly aggregation toggles (daily jobs still run)
 ENABLE_LEVEL_METRICS_HOURLY=0
 LEVEL_CHURN_HOURLY_REFRESH=0
+LEVEL_METRICS_DAILY_CHUNKED=1
 ENABLE_ACTIVE_USERS_HOURLY=0
 ENABLE_COHORT_HOURLY=0
 ENABLE_MONETIZATION_HOURLY=0
+ACTIVE_USERS_DAILY_CHUNKED=1
+COHORT_DAYINDEX_CHUNK_SIZE=8
+MONETIZATION_DAILY_CHUNKED=1
+AGGREGATION_PAUSE_MS=0
+AGGREGATION_FORCE_GC=0
