feat(clickhouse): add pilot sync foundation and scheduler wiring

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,8 +15,20 @@ LEVEL_METRICS_DAILY_CHUNKED=1
 ENABLE_ACTIVE_USERS_HOURLY=0
 ENABLE_COHORT_HOURLY=0
 ENABLE_MONETIZATION_HOURLY=0
+ENABLE_CLICKHOUSE_PIPELINE=0
 ACTIVE_USERS_DAILY_CHUNKED=1
 COHORT_DAYINDEX_CHUNK_SIZE=8
 MONETIZATION_DAILY_CHUNKED=1
 AGGREGATION_PAUSE_MS=0
 AGGREGATION_FORCE_GC=0
+
+# ClickHouse pilot sync
+CLICKHOUSE_URL=""
+CLICKHOUSE_DATABASE="default"
+CLICKHOUSE_USER=""
+CLICKHOUSE_PASSWORD=""
+CLICKHOUSE_SYNC_TABLES="events,revenue,sessions,users"
+CLICKHOUSE_SYNC_BATCH_SIZE=10000
+CLICKHOUSE_SYNC_MAX_BATCHES=5
+CLICKHOUSE_SYNC_CRON="*/5 * * * *"
+CLICKHOUSE_HTTP_TIMEOUT_MS=15000
