perf(heartbeat): throttle and batch session heartbeat persistence

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,8 @@ COHORT_DAYINDEX_CHUNK_SIZE=8
 MONETIZATION_DAILY_CHUNKED=1
 AGGREGATION_PAUSE_MS=0
 AGGREGATION_FORCE_GC=0
+
+# Session heartbeat write controls
+HEARTBEAT_MIN_PERSIST_INTERVAL_SECONDS=60
+HEARTBEAT_PERSIST_DURATION=0
+HEARTBEAT_BATCH_UPDATE_CHUNK_SIZE=250
