--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,3 +25,14 @@ AGGREGATION_FORCE_GC=0
 HEARTBEAT_MIN_PERSIST_INTERVAL_SECONDS=60
 HEARTBEAT_PERSIST_DURATION=0
 HEARTBEAT_BATCH_UPDATE_CHUNK_SIZE=250
+
+# API key auth cache (reduces repeated game lookups)
+AUTH_GAME_CACHE_TTL_SECONDS=60
+AUTH_GAME_NEG_CACHE_TTL_SECONDS=10
+AUTH_GAME_CACHE_MAX_ENTRIES=10000
+
+# Optional diagnostics
+ANALYTICS_TRACE=0
+ANALYTICS_TRACE_SLOW_MS=1000
+# Set to 1 only if you want slow query traces as warn logs
+ANALYTICS_TRACE_WARN=0
